--- a/app/src/main/res/layout/activity_load_image.xml
+++ b/app/src/main/res/layout/activity_load_image.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
+
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar"/>
+        layout="@layout/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
-        tools:itemCount="16"
         android:id="@+id/rcvListImg"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -18,24 +18,26 @@
         android:overScrollMode="never"
         android:scrollbars="none"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:spanCount="4"
+        tools:itemCount="16"
         tools:listitem="@layout/item_my_creation" />
+
     <LinearLayout
-        android:gravity="center"
         android:id="@+id/layoutNoPics"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="vertical"
         android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
+        <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="@dimen/dp200"
             android:layout_height="@dimen/dp200"
             android:layout_gravity="center"
