--- a/app/src/main/res/layout/activity_customize_smiley.xml
+++ b/app/src/main/res/layout/activity_customize_smiley.xml
@@ -4,27 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.CustomizeSmiley"
-    android:background="#F4DED3">
+    android:background="#F4DED3"
+    tools:context=".activity.CustomizeSmiley">
+
     <include
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/toolbar"
-        layout="@layout/toolbar_app"/>
+        layout="@layout/toolbar_app"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <RelativeLayout
-        android:layout_marginVertical="@dimen/dp50"
         android:id="@+id/rl_control"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginVertical="@dimen/dp50"
         android:background="#F4DED3"
         app:layout_constraintBottom_toTopOf="@id/list_bottom"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/background"
-            android:layout_centerInParent="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/ig_custom"
@@ -34,102 +37,117 @@
             android:scaleType="fitXY" />
 
     </RelativeLayout>
+
     <HorizontalScrollView
-        android:background="@color/white"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/list_bottom"
-        app:layout_constraintBottom_toTopOf="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="0dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <androidx.appcompat.widget.AppCompatImageView
-                android:padding="@dimen/dp10"
                 android:id="@+id/face"
-                android:src="@drawable/frn1"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
-            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_height="100dp"
                 android:padding="@dimen/dp10"
+                android:src="@drawable/frn1" />
+
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/love"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
+                android:padding="@dimen/dp10"
                 android:src="@drawable/frn2" />
+
             <androidx.appcompat.widget.AppCompatImageView
-                android:padding="@dimen/dp10"
                 android:id="@+id/fram6"
-                android:src="@drawable/frm3"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
-            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_height="100dp"
                 android:padding="@dimen/dp10"
+                android:src="@drawable/frm3" />
+
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fram5"
-                android:src="@drawable/frn4"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
-            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_height="100dp"
                 android:padding="@dimen/dp10"
+                android:src="@drawable/frn4" />
+
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fram4"
-                android:src="@drawable/frm5"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
-            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_height="100dp"
                 android:padding="@dimen/dp10"
+                android:src="@drawable/frm5" />
+
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fram3"
-                android:src="@drawable/frm6"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
-            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_height="100dp"
                 android:padding="@dimen/dp10"
+                android:src="@drawable/frm6" />
+
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fram2"
-                android:src="@drawable/frm7"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
-            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_height="100dp"
                 android:padding="@dimen/dp10"
+                android:src="@drawable/frm7" />
+
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fram1"
-                android:src="@drawable/frm9"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
-            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_height="100dp"
                 android:padding="@dimen/dp10"
+                android:src="@drawable/frm9" />
+
+            <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/fram"
-                android:src="@drawable/frm8"
                 android:layout_width="100dp"
-                android:layout_height="100dp"/>
+                android:layout_height="100dp"
+                android:padding="@dimen/dp10"
+                android:src="@drawable/frm8" />
         </LinearLayout>
     </HorizontalScrollView>
+
     <View
         android:id="@+id/view"
-        app:layout_constraintBottom_toTopOf="@id/ln_bottom"
-        android:background="#F4DED3"
         android:layout_width="match_parent"
-        android:layout_height="1dp"/>
+        android:layout_height="1dp"
+        android:background="#F4DED3"
+        app:layout_constraintBottom_toTopOf="@id/ln_bottom" />
+
     <LinearLayout
-        android:background="@color/white"
         android:id="@+id/ln_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="horizontal"
         android:paddingHorizontal="@dimen/dp10"
         android:paddingVertical="@dimen/dp20"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/camera"
-            android:src="@drawable/camera"
-            android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="40dp"/>
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:src="@drawable/camera" />
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/album"
-            android:src="@drawable/album"
             android:layout_width="0dp"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:layout_height="40dp"/>
+            android:src="@drawable/album" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
