--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -66,6 +66,7 @@
                 android:layout_marginHorizontal="32dp"
                 android:gravity="center">
                 <TextView
+                    android:includeFontPadding="false"
                     android:id="@+id/tv_title"
                     style="@style/TextViewBase"
                     android:layout_width="match_parent"
@@ -77,6 +78,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:includeFontPadding="false"
                     android:fontFamily="@font/poppins_regular_400"
                     android:layout_below="@+id/tv_title"
                     android:id="@+id/tv_content"
@@ -142,6 +144,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
+                        android:includeFontPadding="false"
                         android:layout_gravity="center"
                         android:paddingVertical="@dimen/_12sdp"
                         style="@style/TextViewBase"
