--- a/app/src/main/res/layout/activity_language.xml
+++ b/app/src/main/res/layout/activity_language.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -10,45 +10,47 @@
         android:layout_height="?attr/actionBarSize">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:background="?android:attr/actionBarItemBackground"
             android:id="@+id/back"
             android:layout_width="@dimen/dp26"
             android:layout_height="@dimen/dp26"
             android:layout_marginStart="@dimen/dp10"
+            android:background="?android:attr/actionBarItemBackground"
             android:src="@drawable/ic_left"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:fontFamily="@font/poppins_medium_500"
-            android:layout_marginStart="@dimen/dp10"
-            android:letterSpacing="0.03"
             android:id="@+id/tv_toolbar"
             style="@style/TextViewBase"
+            android:layout_marginStart="@dimen/dp10"
+            android:fontFamily="@font/poppins_medium_500"
+            android:letterSpacing="0.03"
             android:text="@string/language"
             android:textColor="@color/color_241912"
             android:textSize="@dimen/sp16"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/back"
             app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.appcompat.widget.AppCompatImageView
-            android:background="?android:attr/actionBarItemBackground"
             android:id="@+id/done"
             android:layout_width="@dimen/dp30"
             android:layout_height="@dimen/dp30"
             android:layout_marginEnd="@dimen/dp10"
+            android:background="?android:attr/actionBarItemBackground"
             android:src="@drawable/check"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <View
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
             android:background="#F4DED3"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
