--- a/app/src/main/res/layout/activity_language_start.xml
+++ b/app/src/main/res/layout/activity_language_start.xml
@@ -1,48 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFF8F8"
->
+    android:background="#FFF8F8">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/white"
         android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:background="@color/white">
+
         <TextView
-            android:fontFamily="@font/poppins_medium_500"
             android:id="@+id/tv_toolbar"
             style="@style/TextViewBase"
+            android:fontFamily="@font/poppins_medium_500"
             android:text="@string/language"
             android:textColor="@color/color_241912"
             android:textSize="@dimen/sp16"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:background="?android:attr/actionBarItemBackground"
             android:id="@+id/done"
             android:layout_width="@dimen/dp30"
             android:layout_height="@dimen/dp30"
             android:layout_marginEnd="@dimen/dp10"
+            android:background="?android:attr/actionBarItemBackground"
             android:src="@drawable/check"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <View
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
             android:background="#F4DED3"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
     <androidx.core.widget.NestedScrollView
@@ -57,9 +57,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:layout_marginHorizontal="10dp">
+            android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
