--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,6 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.card.MaterialCardView
-                app:cardBackgroundColor="#FF8E36"
                 android:id="@+id/ll_create"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
@@ -41,6 +40,7 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:focusable="true"
+                app:cardBackgroundColor="#FF8E36"
                 app:cardCornerRadius="@dimen/dp20"
                 app:cardElevation="0dp"
                 app:rippleColor="@color/color_988E90"
@@ -53,6 +53,7 @@
                     android:layout_height="match_parent">
 
                     <TextView
+                        android:ellipsize="end"
                         android:id="@+id/create"
                         style="@style/TextViewBase"
                         android:layout_marginStart="@dimen/dp20"
@@ -63,6 +64,7 @@
                         android:textSize="@dimen/sp18" />
 
                     <TextView
+                        android:ellipsize="end"
                         style="@style/TextViewBase"
                         android:layout_below="@+id/create"
                         android:layout_marginStart="@dimen/dp20"
@@ -73,7 +75,7 @@
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_width="90dp"
-                        android:layout_height="100dp"
+                        android:layout_height="90dp"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
                         android:src="@drawable/smile" />
@@ -102,6 +104,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:ellipsize="end"
                         android:id="@+id/create_text"
                         style="@style/TextViewBase"
                         android:layout_marginStart="@dimen/dp20"
@@ -112,6 +115,7 @@
                         android:textSize="@dimen/sp18" />
 
                     <TextView
+                        android:ellipsize="end"
                         style="@style/TextViewBase"
                         android:layout_below="@id/create_text"
                         android:layout_marginStart="@dimen/dp20"
@@ -123,7 +127,7 @@
                     <androidx.appcompat.widget.AppCompatImageView
 
                         android:layout_width="90dp"
-                        android:layout_height="120dp"
+                        android:layout_height="100dp"
                         android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
                         android:src="@drawable/create_text" />
@@ -135,7 +139,6 @@
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/mcv_mu_creation"
-            app:rippleColor="@color/color_988E90"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dp20"
@@ -143,6 +146,7 @@
             android:clickable="true"
             android:focusable="true"
             app:cardCornerRadius="@dimen/dp16"
+            app:rippleColor="@color/color_988E90"
             app:strokeColor="@color/white"
             app:strokeWidth="0dp">
 
@@ -163,6 +167,7 @@
                     android:src="@drawable/ic_my_create" />
 
                 <TextView
+                    android:includeFontPadding="false"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
