--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <include
         android:id="@+id/toolbar"
@@ -125,11 +124,11 @@
         app:layout_constraintTop_toBottomOf="@+id/v2">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:padding="2dp"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp40"
             android:layout_marginEnd="@dimen/dp20"
             android:layout_weight="0.9"
+            android:padding="2dp"
             android:src="@drawable/share" />
 
         <TextView
