--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:background="@color/white"
     android:orientation="vertical">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_splash"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_120sdp"
@@ -19,7 +19,7 @@
         android:textColor="#241912"
         android:fontFamily="@font/poppins_medium_500"
         android:textSize="@dimen/_20ssp"
-        android:text="Emoji Maker"
+        android:text="@string/app_name"
         android:layout_marginTop="@dimen/_20sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
