--- a/app/src/main/res/layout/dialog_delete.xml
+++ b/app/src/main/res/layout/dialog_delete.xml
@@ -19,58 +19,63 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="12dp">
+
             <TextView
-                android:fontFamily="@font/poppins_semibold_600"
-                android:layout_marginTop="@dimen/dp5"
-                android:textSize="@dimen/sp20"
-                android:layout_gravity="center"
-                android:text="@string/Delete"
-                style="@style/TextViewBase"/>
-            <TextView
-                android:textColor="#988E90"
-                android:layout_marginTop="@dimen/dp10"
-                android:layout_gravity="center"
                 style="@style/TextViewBase"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp5"
+                android:fontFamily="@font/poppins_semibold_600"
+                android:text="@string/Delete"
+                android:textSize="@dimen/sp20" />
+
+            <TextView
+                style="@style/TextViewBase"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp10"
                 android:fontFamily="@font/poppins_regular_400"
                 android:text="@string/one_delete"
+                android:textColor="#988E90"
                 android:textSize="16sp" />
+
             <LinearLayout
-                android:layout_marginTop="@dimen/dp20"
-                android:layout_below="@+id/ll_image"
                 android:id="@+id/ll_control"
-                android:layout_marginBottom="@dimen/dp20"
-                android:layout_marginHorizontal="@dimen/_20sdp"
-                android:orientation="horizontal"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ll_image"
+                android:layout_marginHorizontal="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/dp20"
+                android:layout_marginBottom="@dimen/dp20"
+                android:orientation="horizontal">
+
                 <TextView
-                    android:textColor="#988E90"
-                    android:maxLines="1"
-                    android:ellipsize="end"
-                    android:layout_weight="1"
                     android:id="@+id/cancel"
+                    style="@style/TextViewBase"
                     android:layout_width="0dp"
-                    android:gravity="center"
-                    android:textStyle="bold"
-                    android:paddingVertical="8dp"
                     android:layout_marginEnd="@dimen/dp20"
-                    android:background="@drawable/bg_button_cancel"
-                    android:text="@string/Cancel"
-                    style="@style/TextViewBase" />
-                <TextView
-                    android:textColor="@color/white"
-                    android:backgroundTint="#BA1A1A"
-                    android:maxLines="1"
-                    android:ellipsize="end"
                     android:layout_weight="1"
-                    android:textStyle="bold"
+                    android:background="@drawable/bg_button_cancel"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:paddingVertical="8dp"
+                    android:text="@string/Cancel"
+                    android:textColor="#988E90"
+                    android:textStyle="bold" />
+
+                <TextView
                     android:id="@+id/delete"
                     style="@style/TextViewBase"
                     android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:background="@drawable/bg_button_cancel"
+                    android:backgroundTint="#BA1A1A"
+                    android:ellipsize="end"
                     android:gravity="center"
+                    android:maxLines="1"
                     android:paddingVertical="8dp"
-                    android:text="@string/Delete" />
+                    android:text="@string/Delete"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
