--- a/app/src/main/res/layout/dialogloading.xml
+++ b/app/src/main/res/layout/dialogloading.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        app:cardUseCompatPadding="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginHorizontal="100dp"
         app:cardCornerRadius="@dimen/dp20"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        app:cardUseCompatPadding="false">
+
         <com.airbnb.lottie.LottieAnimationView
-            android:background="@color/white"
             android:id="@+id/animation_view"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_gravity="center"
+            android:background="@color/white"
             app:lottie_autoPlay="true"
             app:lottie_fileName="loadingan.json"
-            app:lottie_loop="true"/>
+            app:lottie_loop="true" />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
