--- a/app/src/main/res/layout/intro_slide_layout.xml
+++ b/app/src/main/res/layout/intro_slide_layout.xml
@@ -7,16 +7,15 @@
     tools:ignore="MissingDefaultResource">
 
 
-
-    <ImageView
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintDimensionRatio="1"
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/im_LogoSlide"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="@dimen/_10sdp"
         android:padding="@dimen/_10sdp"
-        android:scaleType="fitCenter" />
+        android:scaleType="fitCenter"
+        app:layout_constraintDimensionRatio="1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
