--- a/app/src/main/res/layout/item_bg.xml
+++ b/app/src/main/res/layout/item_bg.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/rl_image" xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rl_image"
     android:layout_width="50dp"
     android:layout_height="50dp"
     android:orientation="vertical">
-    <ImageView
-        android:layout_centerInParent="true"
+
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/img_bg"
-        android:layout_margin="10dp"
-        android:layout_gravity="center"
         android:layout_width="40dp"
-        android:layout_height="40dp"/>
+        android:layout_height="40dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_margin="10dp" />
 </RelativeLayout>
