--- a/app/src/main/res/layout/item_color_code.xml
+++ b/app/src/main/res/layout/item_color_code.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginEnd="5dp">
 
     <androidx.cardview.widget.CardView
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         app:cardCornerRadius="5dp">
 
         <LinearLayout
-            android:gravity="center"
-            android:visibility="visible"
             android:id="@+id/txtcolor"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:orientation="horizontal" />
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:visibility="visible" />
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
