--- a/app/src/main/res/layout/item_layout_icon.xml
+++ b/app/src/main/res/layout/item_layout_icon.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:layout_margin="@dimen/dp10"
         android:id="@+id/image_icon"
         android:src="@drawable/icon1bg"
