--- a/app/src/main/res/layout/item_my_creation.xml
+++ b/app/src/main/res/layout/item_my_creation.xml
@@ -6,11 +6,11 @@
     android:layout_margin="@dimen/dp2">
 
     <com.makeramen.roundedimageview.RoundedImageView
-        app:riv_corner_radius="@dimen/_5sdp"
         android:id="@+id/itemImg"
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_centerInParent="true"
         android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"
+        app:riv_corner_radius="@dimen/_5sdp" />
 </RelativeLayout>
