--- a/app/src/main/res/layout/item_my_creation1.xml
+++ b/app/src/main/res/layout/item_my_creation1.xml
@@ -5,10 +5,12 @@
     android:layout_height="90dp"
     android:layout_margin="@dimen/dp2">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
+        app:cardElevation="0dp"
+        app:strokeColor="@color/white"
         android:layout_centerInParent="true"
         app:cardUseCompatPadding="false"
-        app:cardCornerRadius="@dimen/_5sdp"
+        app:cardCornerRadius="@dimen/dp10"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,12 +22,12 @@
             android:scaleType="centerCrop" />
         <androidx.appcompat.widget.AppCompatImageView
             android:visibility="gone"
-            android:padding="@dimen/_20sdp"
+            android:padding="@dimen/_25sdp"
             android:background="#80FFFFFF"
             android:src="@drawable/check_circle"
             android:id="@+id/itemImg1"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </RelativeLayout>
